-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Distributed Query Execution
-
None
-
Query Execution
-
Minor Change
-
ALL
-
v8.1, v8.0, v7.0, v6.0
-
QE 2025-04-28
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When enabling some tests that were previously commented out with a TODO SERVER-98461 comment above them, I found that some commands update / bulkWrite do not return the writeConcernError s as expected by the test.
These test errors are not related to findAndModify (and thus SERVER-98461), so we did not enable the failing assertions as part of SERVER-98461. But we should definitely follow this up and make sure that update / bulkWrite always return writeConcernError s as expected.
- fixes
-
SERVER-113256 [Summary] write concern error reporting issues
-
- Closed
-
- is caused by
-
SERVER-98461 findAndModify where query does not have shard key does not return WCE on failure
-
- Closed
-
- is depended on by
-
TOOLS-3912 Investigate changes in SERVER-103519: Ensure update and bulkWrite commands return WCE in sharded cluster case
- Waiting (Blocked)
- is related to
-
SERVER-98461 findAndModify where query does not have shard key does not return WCE on failure
-
- Closed
-