SERVER-103519 Ensure update and bulkWrite commands return WCE (#35310)

GitOrigin-RevId: 40ced485635886386daa696ec883282c4349cfbf